--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Find Your Niche</h3>
+              <p>Try mulitple different areas of photography before settling on one as your favorite. For example, you may focus on portrait, wedding, sport, or landscape photography. Find your area of expertise and use it to your advantage in your business.</p> 
             </div>
           </li>
 
