--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Build A Complete Portfolio</h3>
+              <p>In order to get hired by someone who isn't a close family member or friend, you will need to have a portfolio to show. Use photographs from mulitple shoots with sifferent subjects to highlight the range of your talents. make sure that your portfolio is comprised of more than just five or ten photos. People will want to see the great work you've done.
+              - If you need to round-out your portfolio with modeling or posed photos, hire amateur models from local agencies. Offer free prints in exchange for free modeling.</p>
 
               <!--
 This block contains a photo and has a caption.
