--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="https://www.flickr.com/photos/natali_antonovich/33259338385" title="2014-10-12 Photographer by Natali Antonovich, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/2948/33259338385_e3110f0d4b_b.jpg"></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Photographer by Natali Antonovich</p>
             </div>
           </li>
 
