--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Effectiveness Rating:</b> 100% Effective</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Professional photography is an excellent career choice for anyone who wants to get paid for using their creative talents. It's one of the few fields where age and college degrees aren't as important as a good eye, a quality product, and self-discipline. Photography is a competitive field, so be prepared to start small. Then perfect your craft and build a portfolio of your best work.</p>
 
           </div>
 
@@ -95,12 +95,11 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>A Camera</li>
+              <li>A Computer</li>
+              <li>A Good Work Ethic</li>
+              <li>Multiple Shoot Ideas</li>
+              <li>Subjects</li>
             </ul>
           </aside>
         </div>
