--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Develop Your Photography Skills</h3>
+              <p>There is no “right way” or "wrong way" to become a better photographer. Some people take a class or get a college art degree with a photography focus. Others believe that college is a waste of time for becoming a photographer. You may find that you can teach yourself about photography from books and experimentation, or you may want to learn from other professionals. Whatever you decide to choose, if you work for it you can achieve it.
+              - Take tons of photos! Don't rule out any shots or opportunities to shoot. It's okay if some or many of your photos aren't great. As you take more photos, you'll start to discover your voice as a photographer.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/yzqGTWbhcIw?si=twkDG02HP1ezaq-H" frameborder="0" allowfullscreen></iframe>
@@ -152,16 +153,19 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Obtain The Appropriate Equipment</h3>
+              <p>The type of equipment you need will depend on the type of photography you are doing, but you will likely need one or two camera bodies and a variety of lenses for different situations. You will also need a quality photo editing software.
+              - You may need additional equipment for lighting or if you want to create an in-home studio. Again, this depends upon your photographic specialization.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Know Your Camera</h3>
+              <p>Before you book your first paid photo session, you should know every setting, error message, and quirk of your camera. You should be able to change lenses with your eyes closed. Fumbling with equipment will make you seem unprofessional and could affect the quality of your final product.
+              - Read your camera’s manual front to back. The manual will give you a lot of detail about the features and function of your camera in a way that generic photography sources do not.
+              - To become really proficient, practice extensively at home. Experiment with light and shadow, try different settings on your camera, and learn the ins and outs of taking pictures with your available equipment.</p> 
             </div>
           </li>
 
