--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Build A Complete Portfolio</h3>
-              <p>In order to get hired by someone who isn't a close family member or friend, you will need to have a portfolio to show. Use photographs from mulitple shoots with sifferent subjects to highlight the range of your talents. make sure that your portfolio is comprised of more than just five or ten photos. People will want to see the great work you've done.
-              - If you need to round-out your portfolio with modeling or posed photos, hire amateur models from local agencies. Offer free prints in exchange for free modeling.</p>
+              <p>In order to get hired by someone who isn't a close family member or friend, you will need to have a portfolio to show. Use photographs from mulitple shoots with sifferent subjects to highlight the range of your talents. make sure that your portfolio is comprised of more than just five or ten photos. People will want to see the great work you've done. If you need to round-out your portfolio with modeling or posed photos, hire amateur models from local agencies. Offer free prints in exchange for free modeling.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -141,8 +140,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Develop Your Photography Skills</h3>
-              <p>There is no “right way” or "wrong way" to become a better photographer. Some people take a class or get a college art degree with a photography focus. Others believe that college is a waste of time for becoming a photographer. You may find that you can teach yourself about photography from books and experimentation, or you may want to learn from other professionals. Whatever you decide to choose, if you work for it you can achieve it.
-              - Take tons of photos! Don't rule out any shots or opportunities to shoot. It's okay if some or many of your photos aren't great. As you take more photos, you'll start to discover your voice as a photographer.</p>
+              <p>There is no “right way” or "wrong way" to become a better photographer. Some people take a class or get a college art degree with a photography focus. Others believe that college is a waste of time for becoming a photographer. You may find that you can teach yourself about photography from books and experimentation, or you may want to learn from other professionals. Whatever you decide to choose, if you work for it you can achieve it. Take tons of photos! Don't rule out any shots or opportunities to shoot. It's okay if some or many of your photos aren't great. As you take more photos, you'll start to discover your voice as a photographer.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/yzqGTWbhcIw?si=twkDG02HP1ezaq-H" frameborder="0" allowfullscreen></iframe>
@@ -154,8 +152,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Obtain The Appropriate Equipment</h3>
-              <p>The type of equipment you need will depend on the type of photography you are doing, but you will likely need one or two camera bodies and a variety of lenses for different situations. You will also need a quality photo editing software.
-              - You may need additional equipment for lighting or if you want to create an in-home studio. Again, this depends upon your photographic specialization.</p> 
+              <p>The type of equipment you need will depend on the type of photography you are doing, but you will likely need one or two camera bodies and a variety of lenses for different situations. You will also need a quality photo editing software. You may need additional equipment for lighting or if you want to create an in-home studio. Again, this depends upon your photographic specialization.</p> 
             </div>
           </li>
 
@@ -163,9 +160,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Know Your Camera</h3>
-              <p>Before you book your first paid photo session, you should know every setting, error message, and quirk of your camera. You should be able to change lenses with your eyes closed. Fumbling with equipment will make you seem unprofessional and could affect the quality of your final product.
-              - Read your camera’s manual front to back. The manual will give you a lot of detail about the features and function of your camera in a way that generic photography sources do not.
-              - To become really proficient, practice extensively at home. Experiment with light and shadow, try different settings on your camera, and learn the ins and outs of taking pictures with your available equipment.</p> 
+              <p>Before you book your first paid photo session, you should know every setting, error message, and quirk of your camera. You should be able to change lenses with your eyes closed. Fumbling with equipment will make you seem unprofessional and could affect the quality of your final product. Read your camera’s manual front to back. The manual will give you a lot of detail about the features and function of your camera in a way that generic photography sources do not. To become really proficient, practice extensively at home. Experiment with light and shadow, try different settings on your camera, and learn the ins and outs of taking pictures with your available equipment.</p> 
             </div>
           </li>
 
