--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #a0a392;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
-        border: 1px solid #A797B0;           /* CHANGE THE THINGS BORDER HERE */
+        background-color: #cfd1c8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        border: 1px solid: #A797B0;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
         position:relative;
@@ -304,7 +304,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #cfd1c8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
