--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Become-a-Professional-Photographer" title="How to Become a Professional Photographer: 5 Steps - wikiHow">WikiHow</a>.</p>
+      <p>Images are by <a href="https://flic.kr/p/SF1NyH" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
     <!--
