--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Become-a-Professional-Photographer" title="How to Become a Professional Photographer: 5 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/SF1NyH" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/SF1NyH" title=" Photographer by Natali Antonovich, on Flickr">Natali Antonovich from Flickr</a></p>
     </footer>
 
     <!--
